--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@ Email: <%= f.text_field :email %>
 <br>
 Password: <%= f.password_field :password %>
 <br>
-Password Confirmation<%= f.password_field :password_confirmation %>
+Password Confirmation: <%= f.password_field :password_confirmation %>
 <br>
 <%= f.submit %>
 <% end %>
